--- a/index_files/saved_resource(2).html
+++ b/index_files/saved_resource(2).html
@@ -1,3 +1,3 @@
 
-<!-- saved from url=(0077)file:///C:/Users/91826/Desktop/clg/lfe/old/index_files/saved_resource(2).html -->
+<!-- saved from url=(0068)https://ujjwal-mic.github.io/blog/index_files/saved_resource(2).html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></head><body></body></html>
